<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/livewellmain"
    android:padding="@dimen/activity_margin"
    tools:context=".MainActivity" >

   	<TextView
   		android:id="@+id/textView_lwlogo"
   		android:layout_width="150dp"
   		android:layout_height="wrap_content"
   		android:layout_marginLeft="60dip"
        android:layout_marginTop="110dip"
        android:textSize="14sp" />
    
   	<!-- Calories button -->
    <Button
        android:id="@+id/btn_calories"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="120dip"
        android:layout_marginTop="220dip"
        android:background="@drawable/enter"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/textview_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
		style="@style/paragraph"
        android:layout_marginLeft="120dip"
        android:layout_marginTop="265dip" />"
       
  	<!-- Calendar button -->
   	<Button
		android:id="@+id/btn_calendar" 
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:background="@drawable/calendar"
		android:textColor="@drawable/color_selector"
		android:textSize="14sp"		
		android:layout_marginLeft="190dip"
		android:layout_marginTop="220dip" />
		
	<TextView
        android:id="@+id/textview_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/calendar"
		style="@style/paragraph"
        android:layout_marginLeft="180dip"
        android:layout_marginTop="265dip" />
	
	<!-- Create Profile button -->
   	<Button
		android:id="@+id/btn_profile" 
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:background="@drawable/scale"
		android:textColor="@drawable/color_selector"
		android:textSize="14sp"		
		android:layout_marginLeft="250dip"
		android:layout_marginTop="220dip" />
		
	<TextView
        android:id="@+id/textview_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/create_profile"
		style="@style/paragraph"
        android:layout_marginLeft="250dip"
        android:layout_marginTop="265dip" />

   	<!-- Calculator button -->		
	<Button
		android:id="@+id/btn_calculator" 
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:background="@drawable/calc"
		android:layout_marginLeft="120dip"
		android:layout_marginTop="310dip" />
	
	<TextView
        android:id="@+id/textview_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		style="@style/paragraph"
		android:text="@string/calculator"
        android:layout_marginLeft="110dip"
        android:layout_marginTop="365dip" />
   	
   	<!-- Food Snapshot button -->		
	<Button
		android:id="@+id/btn_foodsnap" 
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:background="@drawable/camera"
		android:textSize="14sp"
		android:layout_marginLeft="190dip"
		android:layout_marginTop="310dip" />

	<TextView
        android:id="@+id/textview_foodsnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodsnap"
		style="@style/paragraph"
        android:layout_marginLeft="180dip"
        android:layout_marginTop="365dip" />
	
	<!-- Database button -->		
	<Button
		android:id="@+id/btn_database" 
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:background="@drawable/newfood"
		android:textSize="14sp"
		android:layout_marginLeft="250dip"
		android:layout_marginTop="310dip" />

	<TextView
        android:id="@+id/textview_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database"
		style="@style/paragraph"
        android:layout_marginLeft="250dip"
        android:layout_marginTop="365dip" />

</RelativeLayout>
